--- a/IAM_BaiTap/src/main/resources/application.yml
+++ b/IAM_BaiTap/src/main/resources/application.yml
@@ -57,7 +57,7 @@ spring:
           jwk-set-uri: http://localhost:8080/realms/IAM/protocol/openid-connect/certs
           jwk-set-uris:
             sso: http://localhost:8080/realms/IAM/protocol/openid-connect/certs
-            internal: http://localhost:8090/api/certificate/.well-known/jwks.json
+            internal: http://localhost:8090/api/users/certificate/.well-known/jwks.json
 idp:
   enabled: false
   url: http://localhost:8080
