--- a/storage_service/storage/src/main/resources/application.yml
+++ b/storage_service/storage/src/main/resources/application.yml
@@ -25,10 +25,6 @@ spring:
    format-sql: true
    show-sql: true
  security:
-#  authentication:
-#   user:
-#    name: admin
-#    password: password
    oauth2:
     resourceserver:
      jwt:
@@ -36,6 +32,18 @@ spring:
 #      jwk-set-uri: http://localhost:8080/realms/IAM/protocol/openid-connect/certs
       jwk-set-uris:
        sso: http://localhost:8080/realms/IAM/protocol/openid-connect/certs
-       internal: http://localhost:8090/api/users/certificate/.well-known/jwks.json
+       internal: http://localhost:8090/iam/api/users/certificate/.well-known/jwks.json
+springdoc:
+ swagger-ui:
+  path: /storage/swagger-ui.html
+ api-docs:
+  path: /storage/v3/api-docs
+  version: openapi_3_0
 file:
  upload-dir: uploadFile
+eureka:
+ client:
+  service-url:
+   defaultZone: http://localhost:8761/eureka/
+ instance:
+  prefer-ip-address: true
